test/corpus/literals.txt
================================================================================
Simple identifiers
================================================================================

helloWorld

--------------------------------------------------------------------------------

(source_file
  (statement
    (simple_identifier)))

================================================================================
Unicode identifiers
================================================================================

अ९

--------------------------------------------------------------------------------

(source_file
  (statement
    (simple_identifier)))

================================================================================
Boolean literals
================================================================================

true
false

--------------------------------------------------------------------------------

(source_file
  (statement
    (boolean_literal))
  (statement  
    (boolean_literal)))

================================================================================
String literals
================================================================================

"Hello World!"
"""
This is a "multiline"
string.
"""
"""^1\.(?<version>\d+)(?:\.[^.].*)?$"""
"""Content-Disposition: form-data; name=file; file; name=""; filename="""""

--------------------------------------------------------------------------------

(source_file
  (statement
    (string_literal
      (string_content)))
  (statement
    (string_literal
      (string_content)
      (string_content)
      (string_content)))
  (statement    
    (string_literal
      (string_content)
      (string_content)))
  (statement    
    (string_literal
      (string_content)
      (string_content))))

================================================================================
String literal with lots of repeated quotes
================================================================================

""""What do you "mean"?", he said.
There's a lot of ""quotations"". Even at the "end""""

--------------------------------------------------------------------------------

(source_file
  (statement
    (string_literal
      (string_content)
      (string_content)
      (string_content)
      (string_content)
      (string_content)
      (string_content))))

================================================================================
String interpolation
================================================================================

"Sample $string.interpolation literal"
"Sample ${"string.interpolation"} literal"
"""
Multiline
${"""string interpolation"""} $literal
"""

--------------------------------------------------------------------------------

(source_file
  (statement
    (string_literal
      (string_content)
      (interpolated_identifier)
      (string_content)))
  (statement    
    (string_literal
      (string_content)
      (interpolated_expression
        (string_literal
          (string_content)))
      (string_content)))
  (statement    
    (string_literal
      (string_content)
      (interpolated_expression
        (string_literal
          (string_content)))
    (string_content)
    (interpolated_identifier)
    (string_content))))

================================================================================
More string interpolation
================================================================================

"$"
"$1"
"$ $ $"
"\$foo"
"\$"

--------------------------------------------------------------------------------

(source_file
  (statement
    (string_literal
      (string_content)))
  (statement    
    (string_literal
      (string_content)))
  (statement    
    (string_literal
      (string_content)))
  (statement    
    (string_literal
      (string_content)
      (string_content)))
  (statement    
    (string_literal
      (string_content))))

================================================================================
Integer literals
================================================================================

0
8
23
9847

--------------------------------------------------------------------------------

(source_file
  (statement
    (integer_literal))
  (statement
    (integer_literal))
  (statement  
    (integer_literal))
  (statement  
    (integer_literal)))

================================================================================
Real literals
================================================================================

0.0
-23.434
1e-10
4.3f
+53.9e-3F

--------------------------------------------------------------------------------

(source_file
  (statement
    (real_literal))
  (statement
    (prefix_expression
      op: (prefix_unary_operator)
      expression: (real_literal)))
  (statement
    (real_literal))
  (statement  
    (real_literal))
  (statement  
    (prefix_expression
      op: (prefix_unary_operator)
      expression: (real_literal))))

================================================================================
Unicode literals
================================================================================

assertEquals("\u214E\uA7B5\u2CEF", "\u2132\uA7B4\u2CEF".lowercase())

--------------------------------------------------------------------------------

(source_file
  (statement
    (call_expression
      expression: (simple_identifier)
      args: (value_arguments
        (value_argument
          (string_literal
            (string_content)))
        (value_argument
          (call_expression
            expression: (dot_qualified_expression
              receiver: (string_literal
                (string_content))
              selector: (simple_identifier))
            args: (value_arguments)))))))

================================================================================
Unsigned literal
================================================================================

0xfff0000000000000U

--------------------------------------------------------------------------------

(source_file
  (statement
    (unsigned_literal
      (hex_literal))))

================================================================================
Unsigned Long literal
================================================================================

0xfff0000000000000UL

--------------------------------------------------------------------------------

(source_file
  (statement
    (unsigned_literal
      (hex_literal))))

================================================================================
Null
================================================================================

null

--------------------------------------------------------------------------------

(source_file
  (statement
    (null_literal)))
