test/corpus/soft_keywords.txt
==================
Actual as an identifier
==================


fun foo() {
  val actual = IntArray(n)
  actual[0]++
}

---

(source_file
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
      (block
        (statement
          (property_declaration
            (binding_pattern_kind)
            var_decl: (variable_declaration
              id: (simple_identifier))
            initializer: (call_expression
              expression: (simple_identifier)
              args: (value_arguments
                (value_argument
                  (simple_identifier))))))
          (statement        
            (postfix_expression
              expression: (index_access_expression
                expression: (simple_identifier)
                index: (integer_literal))
              operator: (postfix_unary_operator)))))))
