test/corpus/source-files.txt
================================================================================
File annotations
================================================================================

@file:JvmName("HelloWorld")

val x = 4

--------------------------------------------------------------------------------

(source_file
  (file_annotation
    (constructor_invocation
      (user_type
        (type_identifier))
      (value_arguments
        (value_argument
          (string_literal (string_content))))))
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (integer_literal)))

================================================================================
Multiple file annotations
================================================================================

@file:JvmMultifileClass
@file:JvmName("BuildersKt")
@file:OptIn(ExperimentalContracts::class)

--------------------------------------------------------------------------------

(source_file
  (file_annotation
    (user_type
      (type_identifier)))
  (file_annotation
    (constructor_invocation
      (user_type
        (type_identifier))
      (value_arguments
        (value_argument
          (string_literal (string_content))))))
  (file_annotation
    (constructor_invocation
      (user_type
        (type_identifier))
      (value_arguments
        (value_argument
          (callable_reference
            (user_type
              (type_identifier))))))))

================================================================================
Imports
================================================================================

import java.util.*
import java.util.Scanner
import java.util.StringBuilder

import java.io.Path
import java.io.Files

--------------------------------------------------------------------------------

(source_file
  (import_list
    (import_header
      name: (identifier
        (simple_identifier)
        (simple_identifier))
      (wildcard_import))
    (import_header
      name: (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))
    (import_header
      name: (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier))))
  (import_list
    (import_header
      name: (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))
    (import_header
      name: (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))))

================================================================================
Multiple Imports On A Single Line
================================================================================

import java.io.Path import java.io.Files

--------------------------------------------------------------------------------

(source_file
  (import_list
    (import_header
      name: (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))
    (import_header
      name: (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier)))))

================================================================================
Import Alias
================================================================================

import org.test.Message as TestMessage

--------------------------------------------------------------------------------

(source_file
      (import_list
        (import_header
          name: (identifier
            (simple_identifier)
            (simple_identifier)
            (simple_identifier))
          alias: (simple_identifier))))

================================================================================
Import with * after whitespace
================================================================================

import java.util.concurrent.

* import java.util.    *

--------------------------------------------------------------------------------

(source_file
  (import_list
    (import_header
      name: (identifier
        (simple_identifier)
        (simple_identifier)
        (simple_identifier))
      (wildcard_import))
    (import_header
      name: (identifier
        (simple_identifier)
        (simple_identifier))
      (wildcard_import))))